# gollm-example

./: .gitignore  README.md  go.mod  go.sum  main.go  meson.build
scripts/: download.py
subprojects/: go-llama.cpp.wrap  llama.cpp.wrap
subprojects/packagefiles/: .gitignore
subprojects/packagefiles/go-llama.cpp/: meson.build
subprojects/packagefiles/patches/: llama.go.patch
